# Nutribot

./: .gitignore  CHANGELOG.md  Makefile  README.md
.github/workflows/: ci.yml
backend/: .env.example  Makefile  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260221_0001_init.py  20260221_0002_drop_recommendation_events.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py
backend/app/db/: models.py  session.py
backend/app/integrations/: __init__.py  openfda.py  openfoodfacts.py  pubmed.py  usda_fdc.py
backend/app/models/: __init__.py  schemas.py
backend/app/repositories/: __init__.py  conversation_repository.py  user_repository.py
backend/app/services/: __init__.py  chat_service.py  coach_engine.py  image_service.py  llm_client.py  memory_store.py  rate_limiter.py
backend/app/tools/: __init__.py  registry.py
backend/app/utils/: retry.py
backend/scripts/: decoding_experiments.py  start_backend.sh
backend/tests/: conftest.py  test_chat_service.py  test_image_service.py  test_rate_limiter.py  test_routes.py  test_schema.py  test_schemas.py  test_tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ConversationPanel.jsx  MealDiary.jsx  OnboardingModal.jsx  ResponseCard.jsx  TagInput.jsx  UserContextForm.jsx  WeeklySummary.jsx
frontend/src/styles/: app.css
